[package]
name = "wtransport"
version = "0.1.4"
license = "MIT OR Apache-2.0"
authors = ["Biagio Festa"]
description = "Implementation of the WebTransport (over HTTP3) protocol"
repository = "https://github.com/BiagioFesta/wtransport"
keywords = ["webtransport"]
categories = [ "network-programming", "asynchronous" ]
edition = "2021"
readme = "../README.md"
workspace = ".."
rust-version = "1.70.0"

[[example]]
name = "client"
required-features = ["dangerous-configuration"]

[dependencies]
bytes = "1.5.0"
quinn = "0.10.2"
rustls = "0.21.7"
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
socket2 = "0.5.4"
thiserror = "1.0"
tokio = { version = "1.32.0", default-features = false, features = ["macros"] }
tracing = "0.1.37"
url = "2.4"
wtransport-proto = { version = "0.1.4", path = "../wtransport-proto", features = ["async"] }

[dev-dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
rcgen = "0.11.1"
ring = "0.16.20"
time = "0.3"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = []
dangerous-configuration = ["rustls/dangerous_configuration"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
